test/bad/dictionaries/decl01.px

d: {Int:String}
d = {"": 0}
